--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,3 +20,6 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
 
+    - name: Do this
+    - run: echo '$(Build.BuildNumber)'
+      
