--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,5 +21,5 @@ jobs:
       run: dotnet build --no-restore
 
     - name: Do this
-    - run: echo '$(Build.BuildNumber)'
+      run: echo '$(Build.BuildNumber)'
       
