--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      
+    - name: Generate build number
+      uses: einaregilsson/build-number@v3
+      with:
+        token: ${{secrets.github_token}}
 
     - name: Restore dependencies
       run: dotnet restore
@@ -21,5 +26,5 @@ jobs:
       run: dotnet build --no-restore
 
     - name: Do this
-      run: echo "Build mumber is $GITHUB_RUN_NUMBER"
+      run: echo "Build mumber is $(env:GITHUB_RUN_NUMBER)"
       
