--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,5 +47,7 @@ jobs:
     - name: Display structure of downloaded files
       run: |
         dir
+        rmdir c:\pub\cfapp99_bak1 /q /s
+        rmdir c:\pub\cfapp99_bak /q /s
         ren c:\pub\cfapp99 cfapp99_bak
         md c:\pub\cfapp99
