--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Display structure of downloaded files
       run: |
         dir
-        Remove-Item 'c:\pub\cfapp99_bak1' -Recurse
-        Remove-Item 'c:\pub\cfapp99_bak' -Recurse
+        Remove-Item 'c:\pub\cfapp99_bak1' -Recurse -ErrorAction Ignore
+        Remove-Item 'c:\pub\cfapp99_bak' -Recurse -ErrorAction Ignore
         ren c:\pub\cfapp99 cfapp99_bak
         md c:\pub\cfapp99
