--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -64,5 +64,7 @@ jobs:
         md \\WIN2019DC03\c$\pub\cfapp99
 
     - name: Copy from local folder to the production web app
-      run: ROBOCOPY 'c:\pub\cfapp99' '\\WIN2019DC03\c$\pub\cfapp99' /mir /nfl
-
+    - shell: sh
+      run: |
+        ROBOCOPY "c:\pub\cfapp99" "\\WIN2019DC03\c$\pub\cfapp99" /mir /nfl
+        Dir
